# NumList

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/numlist/: __init__.py  cli.py  manager.py  repl.py
